// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FavoritesPage should add city to favorites on click of a city in the dropdown 1`] = `
Object {
  "component": <Layout>
    <FelaComponent(div)>
      <LabeledInput
        id="citySearch"
        label="Search for a city"
        mb={0}
        name="citySearch"
        onChange={[Function]}
      />
      <FelaComponent(Dropdown)
        align="left"
        closed={true}
        onClose={[Function]}
      >
        <FelaComponent(DropdownLink)
          className="dropdown-link"
          key="4254010"
          onClick={[Function]}
        >
          Austin
        </FelaComponent(DropdownLink)>
        <FelaComponent(DropdownLink)
          className="dropdown-link"
          key="1001775"
          onClick={[Function]}
        >
          Glen Austin
        </FelaComponent(DropdownLink)>
      </FelaComponent(Dropdown)>
    </FelaComponent(div)>
    <Favorites
      favorites={Array []}
    />
  </Layout>,
  "styles": "

",
}
`;

exports[`FavoritesPage should render the favorites 1`] = `
Object {
  "component": <Layout>
    <FelaComponent(div)>
      <LabeledInput
        id="citySearch"
        label="Search for a city"
        mb={0}
        name="citySearch"
        onChange={[Function]}
      />
    </FelaComponent(div)>
    <Favorites
      favorites={Array []}
    />
  </Layout>,
  "styles": "

",
}
`;

exports[`FavoritesPage should render the favorites 2`] = `
Object {
  "component": <Layout>
    <FelaComponent(div)>
      <LabeledInput
        id="citySearch"
        label="Search for a city"
        mb={0}
        name="citySearch"
        onChange={[Function]}
      />
    </FelaComponent(div)>
    <Favorites
      favorites={
        Array [
          Object {
            "city": "london",
            "id": 0,
          },
          Object {
            "city": "austin",
            "id": 1,
          },
        ]
      }
    />
  </Layout>,
  "styles": "

",
}
`;

exports[`FavoritesPage should search and add cities to the search dropdown 1`] = `
Object {
  "component": <Layout>
    <FelaComponent(div)>
      <LabeledInput
        id="citySearch"
        label="Search for a city"
        mb={0}
        name="citySearch"
        onChange={[Function]}
      />
      <FelaComponent(Dropdown)
        align="left"
        closed={true}
        onClose={[Function]}
      >
        <FelaComponent(DropdownLink)
          className="dropdown-link"
          key="4254010"
          onClick={[Function]}
        >
          Austin
        </FelaComponent(DropdownLink)>
        <FelaComponent(DropdownLink)
          className="dropdown-link"
          key="1001775"
          onClick={[Function]}
        >
          Glen Austin
        </FelaComponent(DropdownLink)>
      </FelaComponent(Dropdown)>
    </FelaComponent(div)>
    <Favorites
      favorites={
        Array [
          Object {
            "city": "london",
            "id": 0,
          },
          Object {
            "city": "austin",
            "id": 1,
          },
        ]
      }
    />
  </Layout>,
  "styles": "

",
}
`;
